# linphonenew

./: CMakeLists.txt  FindIlbc.cmake  Makefile.am  README  configure.ac  ilbc.c
